[package]
name = "bbs-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] } 
dotenv = "0.15.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
scraper = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12.4"
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = { version = "1.40.0", features = ["full"] }
